2008-12-19  Massimo Cora'  <mcora@svn.gnome.org>

	* plugins/symbol-db/plugin.c (value_added_current_editor):
	* plugins/symbol-db/symbol-db-view.c (on_symbol_removed):
	removed DEBUG_PRINT. 

	* plugins/symbol-db/symbol-db-engine.c
	(symbol_db_engine_get_file_db_path):
	* plugins/symbol-db/symbol-db-view-search.c
	(sdb_view_search_model_filter), (sdb_view_search_init):
	fixed #563980 - displayed some more info on search tab.

2008-12-19  Sébastien Granjoux  <seb.sfo@free.fr>

	* src/anjuta.c,
	libanjuta/anjuta-utils.c,
	libanjuta/anjuta-utils.h:
	Partial fix for #511589 - Anjuta uses GNOME-VFS

	* plugins/file-loader/plugin.c:
	Do not use fragment in URI converted to GFile
	Remove recent menu item if destination cannot be opened
	Fix #309664 - Some file types impossible to open In Anjuta

	* plugins/document-manager/anjuta-docman.c:
	No need to handle fragment in URI returned by GFile

	* plugins/file-loader/Makefile.am:
	Define G_LOG_DOMAIN for file loader plugin

2008-12-19  Massimo Cora'  <mcora@svn.gnome.org>

	* plugins/symbol-db/symbol-db-engine-iterator.c
	(symbol_db_engine_iterator_first),
	(symbol_db_engine_iterator_last),
	(symbol_db_engine_iterator_set_position):
	using gda_data_model_iter_move_to_row () to use the latest libgda apis.

2008-12-19  Johannes Schmid  <jhs@gnome.org>

	* libanjuta/interfaces/libanjuta.idl:
	* plugins/document-manager/Makefile.am:
	* plugins/document-manager/action-callbacks.c:
	* plugins/document-manager/action-callbacks.h:
	* plugins/document-manager/anjuta-bookmarks.c
	(on_document_changed), (on_add_clicked), (on_remove_clicked),
	(on_row_activate), (on_document_added), (on_selection_changed),
	(anjuta_bookmarks_init), (anjuta_bookmarks_finalize),
	(anjuta_bookmarks_class_init), (anjuta_bookmarks_new),
	(anjuta_bookmarks_add), (anjuta_bookmarks_remove),
	(anjuta_bookmarks_session_save), (anjuta_bookmarks_session_load):
	* plugins/document-manager/anjuta-bookmarks.h:
	* plugins/document-manager/anjuta-document-manager.ui: