@@ -1,3 +1,12 @@
+2008-12-19  Jens Georg  <jens@einstein>
+
+	reviewed by: Sébastien Granjoux  <seb.sfo@free.fr>
+
+	* plugins/valgrind/vgdefaultview.c,
+	plugins/valgrind/plugin.c,
+	libanjuta/anjuta-utils.c:
+	#511589 – Anjuta uses GNOME-VFS
+
 2008-12-19  Massimo Cora'  <mcora@svn.gnome.org>
 
 	* plugins/symbol-db/plugin.c (value_added_current_editor):
